--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 bin
 obj
+/.idea/.idea.adventofcode.dir/.idea/.gitignore
+/.idea/.idea.adventofcode.dir/.idea/encodings.xml
+/.idea/.idea.adventofcode.dir/.idea/indexLayout.xml
+/.idea/.idea.adventofcode.dir/.idea/vcs.xml
